--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
+  "nodemonConfig": {
+    "ignore": ["indeed_job_listings.json"]
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
